Bug 950832 - Disable double-tap zoom and 300ms tap delay in Metro to fix OSK bugs [r=jimm a=lsblakk]